# hello-highs

./: CMakeLists.txt  Solver.cxx  Solver.hxx  main.cxx
.github/workflows/: build.yml
